--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "DataSource=app.db"
+    "DefaultConnection": "DataSource=app.db",
+    "DefaultPostgresConnection": "Host=localhost;Database=test;Username=test;Password=test"
   },
   "Logging": {
     "LogLevel": {
