--- a/CoronaReporter.csproj
+++ b/CoronaReporter.csproj
@@ -10,13 +10,17 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="MatBlazor" Version="2.2.0" />
     <PackageReference Include="Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore" Version="3.1.2" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="3.1.2" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="3.1.2" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="3.1.2" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="3.1.2" />
+    
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="3.1.2" />
+
+    <PackageReference Include="Blazorise.Bootstrap" Version="0.8.8.3" />
+    <PackageReference Include="Blazorise.Icons.FontAwesome" Version="0.8.8.3" />
+    <PackageReference Include="Blazorise.DataGrid" Version="0.8.8.3" />
+
   </ItemGroup>
 
 </Project>
