--- a/appsettings.json
+++ b/appsettings.json
@@ -1,7 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "DataSource=app.db",
-    "DefaultPostgresConnection": "Host=localhost;Database=test;Username=test;Password=test"
+    "DefaultConnection": "Host=localhost;Database=test;Username=test;Password=test"
   },
   "Logging": {
     "LogLevel": {
